--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "normalize.css": "~3.0.3",
-    "modernizr": "~3.2.0"
+    "modernizr": "~3.2.0",
+    "d3": "^3.5.17",
+    "sigma.js": "*"
   }
 }
